--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,26 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.btn-style {
+  height: 20px;
+  width: 20px;
+  border-radius: 4px;
+  border: 1px solid gray;
+  display: grid;
+  place-content: center;
+  cursor: pointer;
+}
+.btn-style:hover {
+  background-color: teal;
+  color: white;
+}
+.color-green {
+  background-color: green;
+  color: white;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.box {
+  border: 1px solid gray;
+  border-radius: 10px;
+  margin-top: 20px;
+  width: 100%;
+  padding: 5px;
+  height: auto;
+  text-align: left;
 }
