--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -31,7 +31,16 @@
 }
 
 .progress {
-  width: 30%;
-  margin-left: 54%;
-  margin-top: 10px;
+  width: 70%;
+  /* border: 1px solid red; */
+}
+#prog{
+  /* border: 1px solid; */
+  width: 60%;
+  margin-left: 42%;
+ margin-top: -30px;
+}
+.pagination{
+  /* border: 1px solid red; */
+  width: 20%;
 }
